--- a/ToDoList/Views/Task/Index.cshtml
+++ b/ToDoList/Views/Task/Index.cshtml
@@ -7,13 +7,21 @@
 <form id="createTaskForm">
     <div class="mb-3">
         <label class="form-label">Название задачи</label>
-        <input name="name" type="text" class="form-control" />
+        <input asp-for="Name" type="text" class="form-control" />
+        <span asp-validation-for="Name" class="text-danger"></span>
     </div>
     <label class="form-label">Приоритет задачи</label>
-    <select name="priority" class="form-select mb-3" asp-items="Html.GetEnumSelectList<Priority>()"></select>
+    <select asp-for="Priority" class="form-select mb-3" asp-items="Html.GetEnumSelectList<Priority>()"></select>
     <div class="mb-3">
         <label class="form-label">Описание задачи</label>
-        <textarea name="description" type="text" class="form-control" rows="3"></textarea>
+        <textarea asp-for="Description" type="text" class="form-control" rows="3"></textarea>
+        <span asp-validation-for="Description" class="text-danger"></span>
     </div>
-    <button id="createTask" class="btn btn-primary">Создать</button>
+    <button asp-action="Create" type="submit" class="btn btn-primary form-control">Создать</button>
 </form>
+
+@section Scripts {
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+}
