--- a/ToDoList/Views/_ViewImports.cshtml
+++ b/ToDoList/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ToDoList
-@using ToDoList.Domain
+@using ToDoList.Domain.Enum
+@using ToDoList.Domain.Entity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
