Реализация создания нового TaskEntity

--- a/ToDoList/Views/Task/Index.cshtml
+++ b/ToDoList/Views/Task/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h4 class="mb-3 text-muted">Создание задачи</h4>
-<form id="createTaskForm">
+<form method="post">
     <div class="mb-3">
         <label class="form-label">Название задачи</label>
         <input asp-for="Name" type="text" class="form-control" />
