--- a/ToDoList/Views/_ViewImports.cshtml
+++ b/ToDoList/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ToDoList
 @using ToDoList.Domain.Enum
 @using ToDoList.Domain.Entity
+@using ToDoList.Domain.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
