--- a/ToDoList/Views/Task/Index.cshtml
+++ b/ToDoList/Views/Task/Index.cshtml
@@ -5,7 +5,7 @@
 
 <div class="col-md-8 order-md-1">
     <h4 class="mb-3 text-muted">Создание задачи</h4>
-    <form method="post" asp-controller="Task" asp-action="Create">
+    <form method="post">
         <div class="mb-3">
             <label class="form-label">Название задачи</label>
             <input asp-for="Task.Name" type="text" class="form-control" />
@@ -18,7 +18,7 @@
             <textarea asp-for="Task.Description" type="text" class="form-control" rows="3"></textarea>
             <span asp-validation-for="Task.Description" class="text-danger"></span>
         </div>
-        <button asp-action="Create" type="submit" class="btn btn-primary form-control">Создать</button>
+        <button asp-controller="Task" asp-action="Create" type="submit" class="btn btn-primary form-control">Создать</button>
     </form>
     <table id="tblData" class="table table-bordered table-striped mt-4" style="width:100%">
         <thead>
@@ -38,7 +38,10 @@
                     <td>@obj.Priority</td>
                     <td>
                         <div class="w-100 btn-group" role="group">
-                            <a asp-controller="Task" asp-action="Update" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                            <a asp-controller="Task" asp-action="Perform" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                                <i class="bi bi-pencil-square"></i> Выполнить
+                            </a>
+                            <a asp-controller="Task" asp-action="Update" asp-route-id="@obj.Id" class="btn btn-secondary mx-2">
                                 <i class="bi bi-pencil-square"></i> Обновить
                             </a>
                             <a asp-controller="Task" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
