Реализация удаления задачи

--- a/ToDoList/Views/Task/Index.cshtml
+++ b/ToDoList/Views/Task/Index.cshtml
@@ -59,7 +59,7 @@
         <span class="text-muted">Выполненные задачи</span>
         <span class="badge badge-secondary badge-pill text-muted"></span>
     </h4>
-    <ul class="list-group mb-3" id="completedListTasks"></ul>
+    <ul class="list-group mb-3"></ul>
     <form method="post" asp-controller="Task" asp-action="EndDay">
         <div class="card col-md-12">
             <button type="submit" class="btn btn-secondary">Закончить день</button>
