--- a/ToDoList/Views/Task/Index.cshtml
+++ b/ToDoList/Views/Task/Index.cshtml
@@ -20,7 +20,7 @@
         </div>
         <button asp-controller="Task" asp-action="Create" type="submit" class="btn btn-primary form-control">Создать</button>
     </form>
-    <table id="tblData" class="table table-bordered table-striped mt-4" style="width:100%">
+    <table class="table table-bordered table-striped mt-4" style="width:100%">
         <thead>
             <tr>
                 <th>Название</th>
@@ -30,7 +30,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var obj in Model.TaskList)
+            @foreach (var obj in Model.TaskUnDoneList.OrderByDescending(x => x.Priority))
             {
                 <tr>
                     <td>@obj.Name</td>
@@ -57,8 +57,25 @@
 <div class="col-md-4 order-md-2 mb-4">
     <h4 class="d-flex justify-content-between align-items-center mb-3">
         <span class="text-muted">Выполненные задачи</span>
-        <span class="badge badge-secondary badge-pill text-muted"></span>
     </h4>
+    <table class="table table-bordered table-striped mt-4" style="width:100%">
+        <thead>
+            <tr>
+                <th>Название</th>
+                <th>Описание</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var obj in Model.TaskDoneList)
+            {
+                <tr>
+                    <td>@obj.Name</td>
+                    <td>@obj.Description</td>
+                    <td>@obj.Priority</td>
+                </tr>
+            }
+        </tbody>
+    </table>
     <ul class="list-group mb-3"></ul>
     <form method="post" asp-controller="Task" asp-action="EndDay">
         <div class="card col-md-12">
