--- a/ToDoList/Views/Task/Index.cshtml
+++ b/ToDoList/Views/Task/Index.cshtml
@@ -6,6 +6,8 @@
 <div class="col-md-8 order-md-1">
     <h4 class="mb-3 text-muted">Создание задачи</h4>
     <form method="post">
+        <input asp-for="Task.DayEntityId" hidden />
+        <input asp-for="Task.TaskEntityId" hidden />
         <div class="mb-3">
             <label class="form-label">Название задачи</label>
             <input asp-for="Task.Name" type="text" class="form-control" />
@@ -38,10 +40,10 @@
                     <td>@obj.Priority</td>
                     <td>
                         <div class="w-100 btn-group" role="group">
-                            <a asp-controller="Task" asp-action="Perform" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                            <a asp-controller="Task" asp-action="Perform" asp-route-id="@obj.TaskEntityId" class="btn btn-primary mx-2">
                                 <i class="bi bi-pencil-square"></i> Выполнить
                             </a>
-                            <a asp-controller="Task" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
+                            <a asp-controller="Task" asp-action="Delete" asp-route-id="@obj.TaskEntityId" class="btn btn-danger mx-2">
                                 <i class="bi bi-trash"></i> Удалить
                             </a>
                         </div>
