Инициализация нового контроллера Statistic

--- a/ToDoList/Views/Shared/_Layout.cshtml
+++ b/ToDoList/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Task" asp-action="Index">Task</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="" asp-action="">Statistic</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Statistic" asp-action="Index">Statistic</a>
                         </li>
                     </ul>
                 </div>
