--- a/ToDoList/Views/Task/Index.cshtml
+++ b/ToDoList/Views/Task/Index.cshtml
@@ -38,59 +38,60 @@
                 {
                     <tr>
                         <td>@obj.Name</td>
-                    <td>@obj.Description</td>
-                    <td>@obj.Priority</td>
-                    <td>
-                        <div class="w-100 btn-group" role="group">
-                            <a asp-controller="Task" asp-action="Perform" asp-route-id="@obj.TaskEntityId" class="btn btn-primary mx-2">
-                                <i class="bi bi-pencil-square"></i> Выполнить
-                            </a>
-                            <a asp-controller="Task" asp-action="Delete" asp-route-id="@obj.TaskEntityId" class="btn btn-danger mx-2">
-                                <i class="bi bi-trash"></i> Удалить
-                            </a>
-                        </div>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
+                        <td>@obj.Description</td>
+                        <td>@obj.Priority</td>
+                        <td>
+                            <div class="w-100 btn-group" role="group">
+                                <a asp-controller="Task" asp-action="Perform" asp-route-id="@obj.TaskEntityId" class="btn btn-primary mx-2">
+                                    <i class="bi bi-pencil-square"></i> Выполнить
+                                </a>
+                                <a asp-controller="Task" asp-action="Delete" asp-route-id="@obj.TaskEntityId" class="btn btn-danger mx-2">
+                                    <i class="bi bi-trash"></i> Удалить
+                                </a>
+                            </div>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
     }
 </div>
 <div class="col-md-4 order-md-2 mb-4">
     <h4 class="d-flex justify-content-between align-items-center mb-3">
         <span class="text-muted">Выполненные задачи</span>
     </h4>
-    @if(Model.TaskDoneList.Count() != 0){
+    @if (Model.TaskDoneList.Count() != 0)
+    {
         <table class="table table-bordered table-striped mt-4" style="width:100%">
-        <thead>
-            <tr>
-                <th>Название</th>
-                <th>Описание</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var obj in Model.TaskDoneList)
-            {
+            <thead>
                 <tr>
-                    <td>@obj.Name</td>
-                    <td>@obj.Description</td>
-                    <td>@obj.Priority</td>
+                    <th>Название</th>
+                    <th>Описание</th>
                 </tr>
-            }
-        </tbody>
-    </table>
-    <br />
-    <form method="post" asp-controller="Task" asp-action="EndDay">
-        <div class="form-group">
-            <label class="form-label">Заметки</label>
-            <textarea asp-for="Day.Notes" type="text" class="form-control" rows="3"></textarea>
-            <span asp-validation-for="Day.Notes" class="text-danger"></span>
-        </div>
+            </thead>
+            <tbody>
+                @foreach (var obj in Model.TaskDoneList)
+                {
+                    <tr>
+                        <td>@obj.Name</td>
+                        <td>@obj.Description</td>
+                        <td>@obj.Priority</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
         <br />
-        <div class="card col-md-12">
-            <button type="submit" class="btn btn-secondary">Закончить день</button>
-        </div>
-    </form>
+        <form method="post" asp-controller="Task" asp-action="EndDay">
+            <div class="form-group">
+                <label class="form-label">Заметки</label>
+                <textarea asp-for="Day.Notes" type="text" class="form-control" rows="3"></textarea>
+                <span asp-validation-for="Day.Notes" class="text-danger"></span>
+            </div>
+            <br />
+            <div class="card col-md-12">
+                <button type="submit" class="btn btn-secondary">Закончить день</button>
+            </div>
+        </form>
     }
 </div>
 
