--- a/ToDoList/Views/Statistic/Index.cshtml
+++ b/ToDoList/Views/Statistic/Index.cshtml
@@ -3,25 +3,23 @@
     ViewData["Title"] = "Statistic Page";
 }
 
-<div id="accordion">
+<div class="accordion" id="accordionExample">
     @foreach (var day in Model.DayList)
     {
-        <div class="card">
-            <div class="card-header" id="headingOne">
-                <h5 class="mb-0">
-                    <button class="btn btn-link" data-toggle="collapse" aria-expanded="true">
-                        День #@day.DayEntityId
-                    </button>
-                </h5>
-            </div>
-            @foreach(var task in Model.TaskList.Where(x => x.DayEntityId == day.DayEntityId))
-            {
-                <div class="collapse show" data-parent="#accordion">
-                    <div class="card-body">
-                        @task.Name - @task.Description - @task.Priority 
-                    </div>
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="heading-@day.DayEntityId">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-@day.DayEntityId" aria-expanded="true" aria-controls="collapse-@day.DayEntityId">
+                    Элемент аккордеона @day.DayEntityId
+                </button>
+            </h2>
+            <div id="collapse-@day.DayEntityId" class="accordion-collapse collapse" aria-labelledby="heading-@day.DayEntityId" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    @foreach (var task in Model.TaskList.Where(x => x.DayEntityId == day.DayEntityId))
+                    {
+                        @task.TaskEntityId
+                    }
                 </div>
-            }
+            </div>
         </div>
     }
 </div>
